--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,6 +5,9 @@ $sidebar-width:12em;
 
 $color-main:lighten(#2980b9,10%);
 
+$color-main:#004A7A;
+$color-main:#FFCC00;
+
 $color-secondary: #f1c40f;
 
 $transition-duration:.25s;
