--- a/sass/_welcome.scss
+++ b/sass/_welcome.scss
@@ -1,6 +1,8 @@
 .welcome-mast{
 	background:$color-main;
 	color:white;
+	background:$color-secondary;
+	color:black;
 	text-align:center;
 	font-size: 2em;
 	position: relative;
