--- a/css/main.css
+++ b/css/main.css
@@ -483,14 +483,14 @@ SUPER SLICK TRANSFORMS
 .blanket, .blanket-white {
   position: relative;
   display: table;
-  max-width: 35em;
+  max-width: 33em;
   padding: 1.5em;
   box-shadow: 3px 3px 25px lightgrey;
   margin: 4em auto 4em;
   border-radius: 5px;
   border: 1px solid lightgrey;
 }
-@media all and (max-width: 35em) {
+@media all and (max-width: 33em) {
   /* line 47, ../sass/_welcome.scss */
   .blanket, .blanket-white {
     margin: 2.5em auto 2.5em;
@@ -577,7 +577,7 @@ SUPER SLICK TRANSFORMS
 .main {
   z-index: 126;
   margin: 5em auto 0.5em;
-  max-width: 35em;
+  max-width: 33em;
   width: 100%;
   padding: .66em;
   background: rgba(255, 255, 255, 0.8);
@@ -589,7 +589,7 @@ SUPER SLICK TRANSFORMS
   -o-transition: all 333ms ease-in-out;
   transition: all 333ms ease-in-out;
 }
-@media all and (max-width: 35em) {
+@media all and (max-width: 33em) {
   /* line 1, ../sass/_room.scss */
   .main {
     width: 100%;
@@ -632,14 +632,14 @@ SUPER SLICK TRANSFORMS
   padding: 5em 1em 4em;
   margin-bottom: -2em;
   overflow-y: auto;
-  opacity: .5;
+  opacity: .7;
   -webkit-transition: all .4s ease-in-out;
   -moz-transition: all .4s ease-in-out;
   -ms-transition: all .4s ease-in-out;
   -o-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
 }
-@media all and (max-width: 59em) {
+@media all and (max-width: 57em) {
   /* line 1, ../sass/_sidebar.scss */
   .fixed-sidebar {
     left: -13em !important;
@@ -704,21 +704,26 @@ SUPER SLICK TRANSFORMS
 }
 
 /* line 85, ../sass/_sidebar.scss */
-.nickname, #logout {
+.nickname, #logout, #toggleRealtime {
   float: right;
   clear: right;
   margin-left: 0.3em;
-  margin-top: 0.3em;
+  margin-top: 0.6em;
 }
 
 /* line 92, ../sass/_sidebar.scss */
+#toggleRealtime {
+  margin-top: .8em;
+}
+
+/* line 97, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 2em;
   text-align: left;
   list-style-type: none;
 }
 
-/* line 97, ../sass/_sidebar.scss */
+/* line 102, ../sass/_sidebar.scss */
 .online-user {
   display: block;
   text-overflow: ellipsis;
@@ -726,13 +731,13 @@ SUPER SLICK TRANSFORMS
   overflow: hidden;
 }
 
-/* line 104, ../sass/_sidebar.scss */
+/* line 109, ../sass/_sidebar.scss */
 .userinfo, .online-users {
   float: right;
   width: 100%;
 }
 
-/* line 109, ../sass/_sidebar.scss */
+/* line 114, ../sass/_sidebar.scss */
 .online-users-count {
   /*
   color:#eee;
@@ -751,20 +756,26 @@ SUPER SLICK TRANSFORMS
   left: 0em;
   top: 4.3em;
   z-index: 998;
+  /*sadly no transition because it would be 
+  	positioned *again* when a heartbeat happens,
+  	will be fixed, soon
+  */
+  /*
   -webkit-transition: all .4s ease-in-out;
   -moz-transition: all .4s ease-in-out;
   -ms-transition: all .4s ease-in-out;
   -o-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
+  */
 }
-@media all and (max-width: 59em) {
-  /* line 109, ../sass/_sidebar.scss */
+@media all and (max-width: 57em) {
+  /* line 114, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
   }
 }
 
-/* line 141, ../sass/_sidebar.scss */
+/* line 152, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -779,50 +790,58 @@ SUPER SLICK TRANSFORMS
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
-@media all and (max-width: 59em) {
-  /* line 141, ../sass/_sidebar.scss */
+@media all and (max-width: 57em) {
+  /* line 152, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
   }
 }
-/* line 160, ../sass/_sidebar.scss */
+/* line 171, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.8325em 0 0 0.8325em;
 }
 
-/* line 169, ../sass/_sidebar.scss */
+/* line 180, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
   display: inline-block;
-  margin: .33em .5em 0 0;
+  margin: .4em .5em 0 0;
   border-radius: 50%;
   float: left;
+  opacity: 1;
 }
-/* line 178, ../sass/_sidebar.scss */
-.status-badge.online {
+/* line 191, ../sass/_sidebar.scss */
+.status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 181, ../sass/_sidebar.scss */
-.status-badge.idle {
+/* line 194, ../sass/_sidebar.scss */
+.status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 186, ../sass/_sidebar.scss */
+/* line 200, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
-  top: 0;
+  top: 1em;
   right: 0;
-  width: 3.66em;
+  height: 3.33em;
+  width: 3.33em;
+  border-radius: 50%;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  padding: 0.8325em;
+  background: #ffcc00;
+  display: inline-block;
 }
 
 /* line 1, ../sass/_messages.scss */
 .messages {
   list-style-type: none;
   padding: 0em .66em;
-  max-width: 35em;
+  max-width: 33em;
   background: rgba(255, 255, 255, 0.6);
   box-shadow: 3px 3px 25px lightgrey;
 }
@@ -959,7 +978,7 @@ body > * {
 
 /* line 17, ../sass/_general.scss */
 body.roomok {
-  max-width: 35em;
+  max-width: 33em;
   margin: 0 auto;
   position: relative;
 }
