--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -7,6 +7,9 @@ $color-main:lighten(#2980b9,10%);
 
 $color-main:#004A7A;
 $color-main:#FFCC00;
+$color-main:#ffc801;
+$color-main:#FFBB00;
+
 
 $color-secondary: #f1c40f;
 
