--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,12 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+/* line 9, ../sass/_typography.scss */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+}
+
 /*
 SUPER SLICK TRANSFORMS
 */
@@ -153,7 +159,7 @@ SUPER SLICK TRANSFORMS
 
 /* line 34, ../sass/_transforms.scss */
 .fly-in-right {
-  opacity: 0;
+  opacity: 0.85;
   -webkit-animation: flyinright 400ms ease;
   -moz-animation: flyinright 400ms ease;
   -o-animation: flyinright 400ms ease;
@@ -305,7 +311,7 @@ SUPER SLICK TRANSFORMS
 @-webkit-keyframes flyinright {
   /* line 97, ../sass/_transforms.scss */
   0% {
-    -webkit-transform: translate(-50px, 0);
+    -webkit-transform: translate(-1px, 0);
   }
 
   /* line 98, ../sass/_transforms.scss */
@@ -318,7 +324,7 @@ SUPER SLICK TRANSFORMS
 @-moz-keyframes flyinright {
   /* line 101, ../sass/_transforms.scss */
   0% {
-    -moz-transform: translate(-50px, 0);
+    -moz-transform: translate(-1px, 0);
   }
 
   /* line 102, ../sass/_transforms.scss */
@@ -331,7 +337,7 @@ SUPER SLICK TRANSFORMS
 @-ms-keyframes flyinright {
   /* line 105, ../sass/_transforms.scss */
   0% {
-    -ms-transform: translate(-50px, 0);
+    -ms-transform: translate(-1px, 0);
   }
 
   /* line 107, ../sass/_transforms.scss */
@@ -344,7 +350,7 @@ SUPER SLICK TRANSFORMS
 @-o-keyframes flyinright {
   /* line 110, ../sass/_transforms.scss */
   0% {
-    -o-transform: translate(-50px, 0);
+    -o-transform: translate(-1px, 0);
   }
 
   /* line 111, ../sass/_transforms.scss */
@@ -357,7 +363,7 @@ SUPER SLICK TRANSFORMS
 @keyframes flyinright {
   /* line 114, ../sass/_transforms.scss */
   0% {
-    transform: translate(-50px, 0);
+    transform: translate(-1px, 0);
   }
 
   /* line 115, ../sass/_transforms.scss */
@@ -435,7 +441,7 @@ SUPER SLICK TRANSFORMS
 
 /* line 1, ../sass/_welcome.scss */
 .welcome-mast {
-  background: #ffcc00;
+  background: #ffbb00;
   color: white;
   background: #f1c40f;
   color: black;
@@ -459,13 +465,8 @@ SUPER SLICK TRANSFORMS
   -o-animation-fill-mode: both;
   animation-fill-mode: both;
 }
-/* line 24, ../sass/_welcome.scss */
-.welcome-mast-cont h1 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-}
 
-/* line 30, ../sass/_welcome.scss */
+/* line 27, ../sass/_welcome.scss */
 #roomid {
   position: relative;
   padding: 1em;
@@ -479,7 +480,7 @@ SUPER SLICK TRANSFORMS
   margin-top: -.3em;
 }
 
-/* line 47, ../sass/_welcome.scss */
+/* line 44, ../sass/_welcome.scss */
 .blanket, .blanket-white {
   position: relative;
   display: table;
@@ -491,83 +492,83 @@ SUPER SLICK TRANSFORMS
   border: 1px solid lightgrey;
 }
 @media all and (max-width: 33em) {
-  /* line 47, ../sass/_welcome.scss */
+  /* line 44, ../sass/_welcome.scss */
   .blanket, .blanket-white {
     margin: 2.5em auto 2.5em;
   }
 }
 
-/* line 61, ../sass/_welcome.scss */
+/* line 58, ../sass/_welcome.scss */
 .blanket-white {
   background: white;
 }
 
-/* line 66, ../sass/_welcome.scss */
+/* line 63, ../sass/_welcome.scss */
 .medium-text {
   font-size: 1.3em;
 }
 
-/* line 69, ../sass/_welcome.scss */
+/* line 66, ../sass/_welcome.scss */
 .vam {
   vertical-align: middle;
   display: table-cell;
 }
 
 @-webkit-keyframes welcome-mast-anim {
-  /* line 76, ../sass/_welcome.scss */
+  /* line 73, ../sass/_welcome.scss */
   0%,100% {
     background-position: 0%;
   }
 
-  /* line 77, ../sass/_welcome.scss */
+  /* line 74, ../sass/_welcome.scss */
   50% {
     background-position: 222px 222px;
   }
 }
 
 @-moz-keyframes welcome-mast-anim {
-  /* line 80, ../sass/_welcome.scss */
+  /* line 77, ../sass/_welcome.scss */
   0% {
     background-position: 0%;
   }
 
-  /* line 81, ../sass/_welcome.scss */
+  /* line 78, ../sass/_welcome.scss */
   100% {
     background-position: 222px 222px;
   }
 }
 
 @-ms-keyframes welcome-mast-anim {
-  /* line 84, ../sass/_welcome.scss */
+  /* line 81, ../sass/_welcome.scss */
   0% {
     background-position: 0%;
   }
 
-  /* line 85, ../sass/_welcome.scss */
+  /* line 82, ../sass/_welcome.scss */
   100% {
     background-position: 222px 222px;
   }
 }
 
 @-o-keyframes welcome-mast-anim {
-  /* line 88, ../sass/_welcome.scss */
+  /* line 85, ../sass/_welcome.scss */
   0% {
     background-position: 0%;
   }
 
-  /* line 89, ../sass/_welcome.scss */
+  /* line 86, ../sass/_welcome.scss */
   100% {
     background-position: 222px 222px;
   }
 }
 
 @keyframes welcome-mast-anim {
-  /* line 92, ../sass/_welcome.scss */
+  /* line 89, ../sass/_welcome.scss */
   0% {
     background-position: 0%;
   }
 
-  /* line 93, ../sass/_welcome.scss */
+  /* line 90, ../sass/_welcome.scss */
   100% {
     background-position: 222px 222px;
   }
@@ -743,11 +744,11 @@ SUPER SLICK TRANSFORMS
   color:#eee;
   text-shadow: .1em .1em .2em #313131;
   */
-  color: black;
+  color: white;
   font-weight: bold;
-  font-family: 'Raleway';
+  font-family: 'Source Sans Pro', sans-serif;
   padding: .5em .8em .5em;
-  background: #f1c40f;
+  background: #ffbb00;
   display: inline-block;
   border-radius: 50%;
   border-top-left-radius: 0px;
@@ -784,7 +785,7 @@ SUPER SLICK TRANSFORMS
   position: fixed;
   height: 3.33em;
   width: 3.33em;
-  background: #f1c40f;
+  background: #ffbb00;
   z-index: 1000;
   border-radius: 50%;
   border-top-left-radius: 0px;
@@ -833,7 +834,7 @@ SUPER SLICK TRANSFORMS
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   padding: 0.8325em;
-  background: #ffcc00;
+  background: #ffbb00;
   display: inline-block;
 }
 
@@ -852,12 +853,17 @@ SUPER SLICK TRANSFORMS
   word-wrap: break-word;
 }
 
-/* line 15, ../sass/_messages.scss */
+/* line 14, ../sass/_messages.scss */
+.in-realtime {
+  background: #fff8e5;
+}
+
+/* line 18, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 18, ../sass/_messages.scss */
+/* line 21, ../sass/_messages.scss */
 #mymessage {
   resize: none;
   margin-top: 30px;
@@ -1001,30 +1007,12 @@ body.roomok {
 }
 /* line 29, ../sass/_general.scss */
 ::selection {
-  background: #FF8400;
-  color: white;
+  background: #ffbb00;
+  color: inherit;
 }
 
 /* line 30, ../sass/_general.scss */
 ::-moz-selection {
-  background: #FF8400;
-  color: white;
-}
-
-/* line 34, ../sass/_general.scss */
-.logo-go-home {
-  height: 3.5em;
-  position: fixed;
-  top: 1em;
-  right: 0;
-  opacity: .666;
-  -webkit-transition: all .333s ease-in-out;
-  -moz-transition: all .333s ease-in-out;
-  -ms-transition: all .333s ease-in-out;
-  -o-transition: all .333s ease-in-out;
-  transition: all .333s ease-in-out;
-}
-/* line 41, ../sass/_general.scss */
-.logo-go-home:hover {
-  opacity: 1;
+  background: #ffbb00;
+  color: inherit;
 }
