--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -5,3 +5,8 @@ body{
 	-ms-text-size-adjust: 100%; 
 	-webkit-font-smoothing: antialiased; 
 }
+
+h1,h2,h3,h4,h5,h6{
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 300;
+}
