--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -2,8 +2,8 @@
 	z-index: 126;
 
 	margin: 5em auto 0.5em;
-	max-width: $limit;
-	width:100%;
+	max-width: $limit - 1em;
+	//width:100%;
 	
 	padding: .66em;
 	
