--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -1,6 +1,6 @@
 .messages{
 	list-style-type: none;
-	padding: 0em .66em;
+	padding: 0.5em 0em 0em;
 	max-width: $limit - 1em;
 
 	background: rgba(255,255,255,.6);
