--- a/sass/_messages.scss
+++ b/sass/_messages.scss
@@ -16,6 +16,7 @@
 			height:1.75em;
 			width: 1.75em;
 			margin-top:.2em;
+			margin-bottom:.2em;
 			margin-left:.5em;
 			border-radius: 45%;
 			border-top-right-radius: 0px;
