--- a/css/main.css
+++ b/css/main.css
@@ -848,46 +848,43 @@ SUPER SLICK TRANSFORMS
 /* line 10, ../sass/_messages.scss */
 .message {
   padding: 0.2em 0.5em;
-  word-wrap: break-word;
   border-bottom: 1px dotted #EFEFEF;
 }
 
-/* line 15, ../sass/_messages.scss */
+/* line 14, ../sass/_messages.scss */
 .useravatar {
   height: 1.75em;
   width: 1.75em;
   margin-top: .2em;
   margin-bottom: .2em;
   margin-left: .5em;
-  border-radius: 45%;
-  border-top-right-radius: 0px;
+  border-radius: 35%;
   border-bottom-right-radius: 0px;
   vertical-align: top;
 }
 
-/* line 27, ../sass/_messages.scss */
+/* line 26, ../sass/_messages.scss */
 .username, .text {
   display: inline-block;
   vertical-align: middle;
   margin-left: .5em;
   margin-right: .5em;
   margin-top: .5em;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-all;
+  -ms-word-break: break-word;
+  word-break: break-word;
 }
 
-/* line 38, ../sass/_messages.scss */
+/* line 36, ../sass/_messages.scss */
 .realtime {
   background: #fff8e5;
 }
 
-/* line 43, ../sass/_messages.scss */
+/* line 41, ../sass/_messages.scss */
 #li-message {
   width: 100%;
 }
 
-/* line 46, ../sass/_messages.scss */
+/* line 44, ../sass/_messages.scss */
 #mymessage {
   resize: none;
   margin-top: 30px;
