--- a/sass/_room.scss
+++ b/sass/_room.scss
@@ -8,7 +8,7 @@
 	padding: .66em;
 	
 
-	background: rgba(255,255,255,.8);
+	//background: rgba(255,255,255,.8);
 
 	border-top-right-radius:0px;
 	border-top-left-radius:0px;
