--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -91,6 +91,12 @@
 #toggleRealtime{
 	//margin-top: .8em;
 }
+	.realtime-image{
+		height: 1.3em;
+		width: 1.3em;
+		margin-top: -.325em;
+		margin-bottom: -.325em;
+	}
 
 
 .online-users{
