--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -17,11 +17,11 @@
 	opacity: .7;
 
 
-	-webkit-transition: all .4s ease-in-out;
-	-moz-transition: all .4s ease-in-out;
-	-ms-transition: all .4s ease-in-out;
-	-o-transition: all .4s ease-in-out;
-	transition: all .4s ease-in-out;
+	-webkit-transition: transform .4s ease-in-out;
+	-moz-transition: transform .4s ease-in-out;
+	-ms-transition: transform .4s ease-in-out;
+	-o-transition: transform .4s ease-in-out;
+	transition: transform .4s ease-in-out;
 
 	@media all and (max-width: $limit + $sidebar-width*2){
 		left: - $sidebar-width - 1em !important;
