--- a/css/main.css
+++ b/css/main.css
@@ -632,11 +632,11 @@ SUPER SLICK TRANSFORMS
   margin-bottom: -2em;
   overflow-y: auto;
   opacity: .7;
-  -webkit-transition: transform .4s ease-in-out;
-  -moz-transition: transform .4s ease-in-out;
-  -ms-transition: transform .4s ease-in-out;
-  -o-transition: transform .4s ease-in-out;
-  transition: transform .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -ms-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 @media all and (max-width: 56em) {
   /* line 1, ../sass/_sidebar.scss */
@@ -645,7 +645,7 @@ SUPER SLICK TRANSFORMS
     padding: 5em 2em 4em;
   }
 }
-/* line 31, ../sass/_sidebar.scss */
+/* line 30, ../sass/_sidebar.scss */
 .fixed-sidebar.show {
   width: 15em;
   z-index: 900;
@@ -653,22 +653,12 @@ SUPER SLICK TRANSFORMS
   background: white;
   box-shadow: .3em .3em 2.5em lightgrey;
 }
-/* line 40, ../sass/_sidebar.scss */
+/* line 39, ../sass/_sidebar.scss */
 .fixed-sidebar:hover {
   opacity: 1;
 }
 
 /* line 44, ../sass/_sidebar.scss */
-.csstransforms .fixed-sidebar {
-  /*@media all and (max-width: $limit + $sidebar-width*2){
-  	-webkit-transform: translateX(-$sidebar-width);
-  	-moz-transform: translateX(-$sidebar-width);
-  	-o-transform: translateX(-$sidebar-width);
-  	-ms-transform: translateX(-$sidebar-width);
-  	transform: translateX(-$sidebar-width);
-  }*/
-}
-/* line 45, ../sass/_sidebar.scss */
 .csstransforms .fixed-sidebar.show {
   -webkit-transform: translateX(13em);
   -moz-transform: translateX(13em);
@@ -677,17 +667,17 @@ SUPER SLICK TRANSFORMS
   transform: translateX(13em);
 }
 
-/* line 62, ../sass/_sidebar.scss */
+/* line 54, ../sass/_sidebar.scss */
 .no-csstransforms .fixed-sidebar.show {
   left: 0 !important;
 }
 
-/* line 67, ../sass/_sidebar.scss */
+/* line 60, ../sass/_sidebar.scss */
 .userinfo {
   text-align: center;
 }
 
-/* line 71, ../sass/_sidebar.scss */
+/* line 64, ../sass/_sidebar.scss */
 .avatar {
   height: 3em;
   border: 1px solid black;
@@ -695,7 +685,7 @@ SUPER SLICK TRANSFORMS
   overflow: hidden;
 }
 
-/* line 78, ../sass/_sidebar.scss */
+/* line 71, ../sass/_sidebar.scss */
 .nickname {
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -703,14 +693,14 @@ SUPER SLICK TRANSFORMS
   display: block;
 }
 
-/* line 84, ../sass/_sidebar.scss */
+/* line 77, ../sass/_sidebar.scss */
 #logout, #toggleRealtime {
   float: left;
   margin-left: 0.3em;
   margin-top: 0.6em;
 }
 
-/* line 94, ../sass/_sidebar.scss */
+/* line 87, ../sass/_sidebar.scss */
 .realtime-image {
   height: 1.3em;
   width: 1.3em;
@@ -718,14 +708,14 @@ SUPER SLICK TRANSFORMS
   margin-bottom: -.325em;
 }
 
-/* line 102, ../sass/_sidebar.scss */
+/* line 95, ../sass/_sidebar.scss */
 .online-users {
   margin-top: 2em;
   text-align: left;
   list-style-type: none;
 }
 
-/* line 107, ../sass/_sidebar.scss */
+/* line 100, ../sass/_sidebar.scss */
 .online-user {
   display: block;
   text-overflow: ellipsis;
@@ -733,13 +723,13 @@ SUPER SLICK TRANSFORMS
   overflow: hidden;
 }
 
-/* line 114, ../sass/_sidebar.scss */
+/* line 107, ../sass/_sidebar.scss */
 .online-users {
   float: right;
   width: 100%;
 }
 
-/* line 119, ../sass/_sidebar.scss */
+/* line 112, ../sass/_sidebar.scss */
 .online-users-count {
   /*
   color:#eee;
@@ -771,13 +761,13 @@ SUPER SLICK TRANSFORMS
   */
 }
 @media all and (max-width: 56em) {
-  /* line 119, ../sass/_sidebar.scss */
+  /* line 112, ../sass/_sidebar.scss */
   .online-users-count {
     left: 0 !important;
   }
 }
 
-/* line 157, ../sass/_sidebar.scss */
+/* line 150, ../sass/_sidebar.scss */
 .toggle-sidebar {
   display: none;
   cursor: pointer;
@@ -793,19 +783,19 @@ SUPER SLICK TRANSFORMS
   border-bottom-left-radius: 0px;
 }
 @media all and (max-width: 56em) {
-  /* line 157, ../sass/_sidebar.scss */
+  /* line 150, ../sass/_sidebar.scss */
   .toggle-sidebar {
     display: block;
   }
 }
-/* line 176, ../sass/_sidebar.scss */
+/* line 169, ../sass/_sidebar.scss */
 .toggle-sidebar .icon-arrow {
   width: 1.665em;
   height: 1.665em;
   margin: 0.8325em 0 0 0.8325em;
 }
 
-/* line 185, ../sass/_sidebar.scss */
+/* line 178, ../sass/_sidebar.scss */
 .status-badge {
   height: .5em;
   width: .5em;
@@ -815,16 +805,16 @@ SUPER SLICK TRANSFORMS
   float: left;
   opacity: 1;
 }
-/* line 196, ../sass/_sidebar.scss */
+/* line 189, ../sass/_sidebar.scss */
 .status-badge.online, .status-badge.on {
   background: #29A100;
 }
-/* line 199, ../sass/_sidebar.scss */
+/* line 192, ../sass/_sidebar.scss */
 .status-badge.idle, .status-badge.off {
   background: #FF8200;
 }
 
-/* line 205, ../sass/_sidebar.scss */
+/* line 198, ../sass/_sidebar.scss */
 .logo {
   position: absolute;
   top: 1em;
